--- a/css/app.style.css
+++ b/css/app.style.css
@@ -1,18 +1,25 @@
 /*
- * CSS App
+ * App CSS sheet
  */
 body {
-    margin: 1px;
-    padding: 1px;
+    margin: 2px;
+    padding: 2px;
+    font-size: 14px;
+    cursor: default;
 }
 
-h1,h2 {
-    margin: 1px;
-    padding: 1px;
+input[type="button"] {
+    border: 1px solid #962313;
+    color: white;
+    background-color: #962313;
+    margin-top: 2px;
+    padding: 4px;
+    font-family: verdana;
+    font-size: 12px;
+    font-weight: bold;
 }
 
-iframe {
-    width: 50%;
-    height: 300px;
-    border: 1px solid black;
+input[type="button"]:hover {
+    background-color: #FF4F32;
+    box-shadow: 0px 0px 2px #962313;
 }
